--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.2.0",
   "description": "JavaScript bind call apply this for Learn.co",
   "main": "index.js",
+  "scripts": {
+    "postinstall": "gem install learn-co",
+    "test": "node_modules/browser-sync/bin/browser-sync.js start --config node_modules/learn-browser/bs-config.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/learn-co-curriculum/js-object-oriented-bind-call-apply-this-lab.git"
@@ -11,8 +15,8 @@
     "learn",
     "flatiron school",
     "javascript",
-    "strings",
-    "code-along"
+    "bind",
+    "lab"
   ],
   "author": "@gj",
   "license": "SEE LICENSE IN LICENSE.md",
@@ -21,6 +25,6 @@
   },
   "homepage": "https://github.com/learn-co-curriculum/js-object-oriented-bind-call-apply-this-lab#readme",
   "devDependencies": {
-    "learn-browser": "^0.1.6"
+    "learn-browser": "^0.1.13"
   }
 }
